--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="w-fit h-fit mx-auto">
           <label for="appt">Select a time:</label>
-          <input class="bg-black" type="time" id="appt" name="appt" />
+          <input class="bg-black" type="time" id="timeinput" name="timeinput" />
         </div>
       </div>
     </div>
