--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body
     class="bg-slate-950 text-white p-0 m-0 w-screen h-screen grid items-center"
   >
-    <div class="main-dir h-fit mx-auto bg-purple-900 rounded-3xl">
+    <div class="main-dir h-fit mx-auto bg-slate-800 rounded-3xl">
       <div
         class="m-16 whitespace- font-semibold text-2xl tracking-wide grid grid-cols-2 grid-rows-3"
       >
