minor UI changes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="w-fit h-fit mx-auto">
           <label for="zoneinput">Locale</label>
           <input
-            class="inline-block bg-purple-950 rounded-2xl max-w-40 p-4"
+            class="inline-block bg-purple-950 rounded-lg max-w-40 p-2"
             type="text"
             id="zoneinput"
             name="fname"
@@ -67,7 +67,7 @@
         <div class="w-fit h-fit mx-auto">
           <label for="appt">Select a time:</label>
           <input
-            class="bg-purple-950 rounded-2xl p-4"
+            class="bg-purple-950 rounded-lg p-2"
             type="time"
             id="timeinput"
             name="timeinput"
