Started UI rework.

--- a/index.html
+++ b/index.html
@@ -2,78 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
-    <link href="css/tailwind.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="/src/tabs.ts" defer></script>
+    <link href="src/style.css" rel="stylesheet" />
+    <title>Nodders</title>
   </head>
-  <script type="module" src="script.js" defer></script>
   <body
-    class="bg-slate-950 text-white p-0 m-0 w-screen h-screen grid items-center"
+    class="m-0 flex h-screen w-screen flex-auto flex-col items-center justify-center p-0"
   >
-    <div class="main-dir h-fit mx-auto bg-slate-800 rounded-3xl">
-      <div
-        class="m-16 whitespace- font-semibold text-2xl tracking-wide grid grid-cols-2 grid-rows-3"
-      >
-        <div class="w-fit h-fit mx-auto">
-          <h3 class="leading-loose">It is currently</h3>
-          <h3>
-            <span id="current-time" class="font-bold">16:00</span>
-            <span
-              id="timezone0"
-              class="underline decoration-4 decoration-purple-500"
-              >EST</span
-            >
-          </h3>
-        </div>
-        <div class="w-fit h-fit mx-auto">
-          <h3 class="leading-loose">
-            <span
-              id="countdown"
-              class="underline decoration-4 decoration-blue-600"
-              >16:00</span
-            >
-            <span
-              id="timezone1"
-              class="underline decoration-4 decoration-purple-500"
-              >EST</span
-            >
-            in
-          </h3>
-          <ul>
-            <li><span id="hours">12 Hours</span></li>
-            <li><span id="minutes">7 minutes</span></li>
-            <li><span id="seconds">14 seconds</span></li>
-          </ul>
-        </div>
-        <hr class="col-span-2 border-2 rounded-3xl m-16" />
-        <div class="col-span-2 w-fit h-fit mx-auto">
-          <p>Config</p>
-        </div>
-        <div class="w-fit h-fit mx-auto">
-          <label for="zoneinput">Locale</label>
-          <input
-            class="inline-block bg-purple-950 rounded-lg max-w-40 p-2"
-            type="text"
-            id="zoneinput"
-            name="fname"
-          /><br />
-        </div>
-        <div class="w-fit h-fit mx-auto">
-          <label for="appt">Select a time:</label>
-          <input
-            class="bg-purple-950 rounded-lg p-2"
-            type="time"
-            id="timeinput"
-            name="timeinput"
-          />
-        </div>
+    <div class="flex flex-col items-center gap-4 pt-8">
+      <div class="flex h-fit w-5/6 flex-auto flex-row justify-between">
+        <button data-controls-id="tab1" class="b-tab" type="button">
+          Tab 1
+        </button>
+        <button data-controls-id="tab2" class="b-tab" type="button">
+          Tab 2
+        </button>
+        <button data-controls-id="tab3" class="b-tab" type="button">
+          Tab 3
+        </button>
       </div>
+      <div id="tab1" class="tab active bg-emerald-800"></div>
+      <div id="tab2" class="tab bg-indigo-800"></div>
+      <div id="tab3" class="tab bg-amber-800"></div>
     </div>
   </body>
 </html>
