--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <script type="module" src="/src/tabs.ts" defer></script>
+    <script type="module" src="/src/main.ts" defer></script>
     <link href="src/style.css" rel="stylesheet" />
     <title>Nodders</title>
   </head>
@@ -22,9 +29,20 @@
           Tab 3
         </button>
       </div>
-      <div id="tab1" class="tab active bg-emerald-800"></div>
-      <div id="tab2" class="tab bg-indigo-800"></div>
-      <div id="tab3" class="tab bg-amber-800"></div>
+      <div id="tab1" class="tab active">
+        <div class="m-auto h-fit w-fit">
+          <h2>
+            <b id="clock-h">12</b>:<b id="clock-m">00</b>:<b id="clock-s">00</b>
+          </h2>
+          <h3 class="ml-4">UTC</h3>
+        </div>
+      </div>
+      <div id="tab2" class="tab">
+        <button id="thebutton" class="bg-indigo-600" type="button">
+          Test me!
+        </button>
+      </div>
+      <div id="tab3" class="tab"></div>
     </div>
   </body>
 </html>
