--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
     <link href="src/style.css" rel="stylesheet" />
     <title>Nodders</title>
   </head>
-  <body
-    class="m-0 flex h-screen w-screen flex-auto flex-col items-center justify-center p-0"
-  >
-    <div class="flex flex-col items-center gap-4 pt-8">
-      <div class="flex h-fit w-5/6 flex-auto flex-row justify-between">
-        <button data-controls-id="tab1" class="b-tab" type="button">
-          Tab 1
-        </button>
-        <button data-controls-id="tab2" class="b-tab" type="button">
-          Tab 2
-        </button>
-        <button data-controls-id="tab3" class="b-tab" type="button">
-          Tab 3
-        </button>
-      </div>
-      <div id="tab1" class="tab active">
+  <body class="m-0 flex h-screen w-screen flex-col p-0">
+    <!-- Tab controls -->
+    <div
+      class="flex h-fit w-1/3 flex-row justify-between self-center justify-self-start"
+    >
+      <button data-controls-id="tab1" class="b-tab" type="button">
+        Time now
+      </button>
+      <button data-controls-id="tab2" class="b-tab" type="button">
+        Countdown
+      </button>
+      <button data-controls-id="tab3" class="b-tab" type="button">
+        Configuration
+      </button>
+    </div>
+
+    <!-- Tab 1 - current time-->
+    <div class="mt-auto mb-auto self-center">
+      <div id="tab1" class="tab">
         <div class="m-auto h-fit w-fit">
           <h2>
             <b id="clock-h">12</b>:<b id="clock-m">00</b>:<b id="clock-s">00</b>
@@ -37,41 +40,36 @@
           <h3 class="ml-4" id="timezone-field">UTC</h3>
         </div>
       </div>
-      <div id="tab2" class="tab">
-        <div class="m-auto h-fit w-fit">
-          <h2>
-            <b id="alarm-h">12</b>:<b id="alarm-m">00</b>:<b id="alarm-s">00</b>
-          </h2>
-        </div>
-        <div class="m-auto h-fit w-fit">
-          <h2>
-            <b id="target-h">12</b>:<b id="target-m">00</b>:<b id="target-s"
-              >00</b
-            >
-          </h2>
-          <h3 class="ml-4" id="timezone-field">UTC</h3>
+
+      <!-- Tab 2 - alarm / countdown -->
+      <div id="tab2" class="tab active">
+        <div class="mx-auto h-fit w-fit">
+          <span class="time-field grid h-fit w-fit grid-cols-2"
+            ><b id="alarm-h">12</b>
+            <p>Hours</p>
+            <b id="alarm-m">00</b>
+            <p>Minutes</p>
+            <b id="alarm-s">00</b>
+            <p>Seconds</p>
+          </span>
+
+          <span class="text">until</span>
+          <span class="time-field"
+            ><b id="target-h">12</b>:<b id="target-m">00</b></span
+          >
+          <span class="timezone-field" id="timezone-field"> UTC</span>
         </div>
       </div>
-      <div id="tab3" class="tab flex">
-        <div>
-          <h4>Timezone:</h4>
-          <input
-            id="input-timezone"
-            class="layer-1"
-            type="text"
-            name=""
-            value=""
-          />
-        </div>
-        <div>
-          <h4>Countdown to:</h4>
-          <input
-            id="input-alarm"
-            class="layer-1"
-            type="time"
-            name=""
-            value=""
-          />
+
+      <!-- Tab 3 - Configuration -->
+      <div id="tab3" class="tab">
+        <div class="mx-auto h-fit w-fit">
+          <div class="shrunk grid grid-cols-2">
+            <h4>Timezone</h4>
+            <input id="input-timezone" class="layer-1" type="text" />
+            <h4>Countdown to</h4>
+            <input id="input-alarm" class="layer-1" type="time" />
+          </div>
         </div>
       </div>
     </div>
